--- a/produtos.html
+++ b/produtos.html
@@ -45,5 +45,10 @@
 				</li>
 			</ul>
 		</main>
+
+		<footer>
+			<img src="imagens/logo-branco.png">
+			<p class="copyright">&copy; Copyright Barber eX - 2021</p>
+		</footer>
 	</body>
 </html>
